--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <!-- Hidden items -->
-            <div class="visible-xs hidden-items">
+            <div class="visible-xs hidden-items hide">
                 <div class="list-of-views">
                     <ul>
                         <li ng-repeat="navItem in root.topNavItems">
