Fixed wall-map not appearing

--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -253,7 +253,7 @@
                                                                 </div>
                                                                 <div class="col-md-6">
                                                                     <label class="layoutRadio">
-                                                                        <input ng-model="wallOptions.layoutStyle" value="4" name="layoutStyle" type="radio"></input>
+                                                                        <input ng-model="newWallOptions.layoutStyle" value="4" name="layoutStyle" type="radio"></input>
                                                                         <img src="images/map-layout-thumb.jpg" alt="">
                                                                     </label>
                                                                 </div>
