--- a/app/views/wall/display.html
+++ b/app/views/wall/display.html
@@ -33,8 +33,7 @@
                 </div>
                 <div ng-switch-when="3" class="animate-repeat" ng-repeat="status in wall.statuses" coa open="wall.open" data="status"></div>
                 <div ng-switch-when="4">
-                    <div data="wall.statuses" id="map" maplayout style="width:100%; height:800px"></div>
-
+                    <div data="wall.statuses" id="map" maplayout style="height:800px"></div>
                 </div>
             </div>
             <div ng-show="wall.statuses.length>0" ng-if="wall.wallOptions.showStatistics" class="col-md-4">
