--- a/app/styles/_topnav.scss
+++ b/app/styles/_topnav.scss
@@ -155,17 +155,9 @@
 		.left-logo-and-brand {
 			float: left;
 		}
-	.hidden-items.hide {
-		display: block !important;
-		opacity: 0;
-		transition: all 0.4s ease-in-out;
-		height: 0;
-		overflow: hidden;
-	}
 	.hidden-items {
-		transition: all 0.4s ease-in-out;
-		opacity: 1;
-		height: auto;
+		display: none;
+		width: 100%;
 		> div {
 			text-align: right;
 		}
