--- a/app/views/signin-twitter.html
+++ b/app/views/signin-twitter.html
@@ -5,7 +5,7 @@
 <div ng-show="!twitterSession" class="signin">
 	<a href="">
 		<span class="link" ng-click="#signupModal" data-target="#signupModal">
-			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#signupModal"><i class="fa fa-twitter"></i>Signup via Twitter</button>
+			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#signupModal"><i class="fa fa-twitter"></i>Sign in</button>
 		</span>
 	</a>
 </div>
