Adds filters to the missing cards, coa and linear layouts on wall to show links clickable

--- a/app/views/wall/templates/card.html
+++ b/app/views/wall/templates/card.html
@@ -2,7 +2,7 @@
     <img class="avatar spinner" onError="this.onerror=null;this.src='/images/anon_200x200.png';" ng-src="{{card.user.profile_image_url_https | biggerProfileImage}}" alt="user-images">
     <div class="card-content">
         <!-- Main content -->
-        <p class="card-content-text" ng-bind-html="card.text | tweetMention | tweetHashtag | toTrusted"></p>
+        <p class="card-content-text" ng-bind-html="card.text | tweetTextLink | tweetMention | tweetHashtag | toTrusted"></p>
         <!-- Images -->
         <!--         <div card-ng-click="open(card.id_str);" ng-class="{'images-wrapper': true, 'showdetail': showdetail}" ng-if="card.images_count"> -->
         
