Fixes #243 Tweets from people you follow fails because of timeout on a filter

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -6,7 +6,7 @@
         <div class="result-container col-md-4 col-lg-3" ng-show="root.twitterSession">
             <div class="home-user-info">
                 <div class="blue-background-placeholder">
-                    <img ng-src="{{root.twitterSession.profile_banner_url}}" alt="user-banner-photo">    
+                    <img ng-src="{{root.twitterSession.profile_banner_url}}" alt="user-banner-photo" ng-show="root.twitterSession.profile_banner_url">    
                 </div>
                 <div class="home-user-info-content">
                     <div class="top-content">
