Fixes #241 Removes trasnitions on wall and other modals/lightboxes

--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -68,7 +68,7 @@
 </header>
 
 <!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
+<div id="myModal" class="modal" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
@@ -97,7 +97,7 @@
   </div>
 </div>
 <!-- Signup modal -->
-<div id="signupModal" class="modal fade" role="dialog" ng-if="!root.twitterSession">
+<div id="signupModal" class="modal" role="dialog" ng-if="!root.twitterSession">
   <div class="modal-dialog">
 
     <!-- Modal content-->
