Fixes #118 Adds color to body and makes the image button clickable file picker

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2655,3 +2655,12 @@ div.title-as-current-search-term > span {
 	display: block;
 	margin-top: 20px;
 }
+
+form#tweet > div.modal-body {
+    background-color: #E5F2F7;
+}
+
+form#tweet > div.modal-footer {
+    background-color: #E5F2F7;
+    margin-top: -1%;
+}
