#252, wall stretches to screen (TRIAL)

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1699,7 +1699,7 @@
 
 .linear {
     display: block;
-    min-height: 164px;
+    height: 90%;
     background: white;
     padding: 20px 12px;
     margin-bottom: 25px;
@@ -1709,22 +1709,18 @@
         border-right-left-radius: 6px;
     }
     .avatar {
-        height: 130px;
-        max-width: 130px;
+        min-height: 130px;
+        min-width: 130px;
         float: left;
         border-radius: 6px;
     }
     .linear-content {
         position: relative;
         margin-left: 150px;
-        min-height: 130px;
-        .name {
-            &:hover {
-                color: $search-twitter-blue;
-            }
-        }
+        height: 100%;
         img {
         	height: 100%;
+        	max-width: 100%;
         }
         .linear-content-text {
             word-break: break-all;
@@ -1739,8 +1735,8 @@
             }
         }
         .metadata {
-/*            position: absolute;
-			bottom: 0;*/
+            position: absolute;
+			bottom: 0;
             margin-top: 5px;
             font-size: 18px;
             color: #8899A6;
@@ -1768,6 +1764,7 @@
 	}
 	.wall-container {
 	    background: #F5F8FA;
+	    height: 100%;
 	    // Helper classes
 	    .abs-center-y {
 	        position: absolute;
@@ -1806,6 +1803,7 @@
 	        margin-top: 10px;
 	        border-radius: 6px;
 	        padding: 0;
+	        height: 100%;
 	        .new-tweet-noti {
 	            display: block;
 	            padding: 10px 1px;
@@ -1825,6 +1823,7 @@
 	        .result-container {
 	            border: 1px solid $search-grey-border;
 	            padding: 0;
+	            height: 100%;
 	        }
 	        .tweet {
 	            display: block;
