Added fade class to wall creation modal
The code to launch the wall display is called in the event handler of
the close event of the modal.

--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" type="text/css" href="css/angular-toggle-switch.css">
-<div class="modal" id="wall-modal" role="dialog">
+<div class="modal fade" id="wall-modal" role="dialog">
     <div class="modal-dialog modal-lg wall-modal-dialog">
         <div class="modal-content wall-modal-content">
             <div class="modal-header">
