--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2398,15 +2398,14 @@
 	.advanced-search-view-container {
 		min-height: 100vh;
 		background-color: white;
-		margin-top: -20px;
 		padding-bottom: 200px;
 		text-align: center;
+		background-color: #F5F8FA;
 		.advanced-search-title {
 			font-size: 27px;
 			font-weight: 500;
 			text-align: center;
-			margin: 20px 0 -30px 0;
-			padding: 20px;
+			margin: 20px 0;
 			span {
 				font-weight: 700;
 			}
