Edit advanced search result style to match with search view

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2531,7 +2531,8 @@
 			.final-search-term {
 				margin: 0;
 				padding: 15px 0;
-				background-color: white;
+				background-color: #55acee;
+				color: white;
 				span {
 					font-style: italic;
 				}
