Add background white to topnav's container to maintain it in all views

--- a/app/styles/_topnav.scss
+++ b/app/styles/_topnav.scss
@@ -1,6 +1,7 @@
 /* Topnav */
 	.main-header {
 		max-height: 1000px !important;
+		background: white;
 		> .topnav {
 			background: white;
 			height: 50px;
