#252, number of tweet should not cover logo or face too much in the sidebar

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2645,7 +2645,7 @@ div.title-as-current-search-term > span {
 .leaderboard-label {
 	top:9px;
 	position: absolute;
-	right: 0px;
+	left: 48px;
 	text-align: center;
 	line-height: .9;
 	padding: 2px 3px;
