--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,9 +1,9 @@
 <div class="content-wrapper">
     <!-- Main content -->
-    <div class="container-fluid content-container">
+    <div class="container content-container">
       
         <!-- Left content: Who to follow, trends -->
-        <div class="result-container col-md-4 col-lg-3" ng-show="root.twitterSession">
+        <div class="left-result-container col-md-4 col-lg-3" ng-show="root.twitterSession">
             <div class="home-user-info">
                 <div class="blue-background-placeholder">
                     <img ng-src="{{root.twitterSession.profile_banner_url}}" alt="user-banner-photo" ng-show="root.twitterSession.profile_banner_url">    
@@ -40,7 +40,7 @@
 
 
         <!-- Center result + option filters -->
-        <div class="result-container col-md-6" ng-show="root.twitterSession">
+        <div class="center-result-container col-md-6" ng-show="root.twitterSession">
             <div class="row cms-view">
                 <div class="main-result-container">
                     <div class="statuses-container box-body chat" id="chat-box" style="width: auto;">
@@ -60,7 +60,7 @@
         </div>
 
         <!-- Right content: Other statistics -->
-        <div class="result-container col-md-3">
+        <div class="right-result-container col-md-3">
 
         </div>
 
